--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -303,17 +303,47 @@ img {
 }
 
 .container {
-  width: 1200px;
+
+  min-width: 320px;
   padding: 0 15px;
   margin: 0 auto;
 }
+@media screen and (max-width: 319px) {
+  .container {
+    background-color: aqua;
+  }
+}
+@media screen and (max-width: 767px) {
+  .container {
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
 
 .section-title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   text-align: center;
-  font-size: 36px;
+  font-size: 28px;
+  line-height: 1.179;
   font-weight: 700;
 }
+@media screen and (min-width: 1200px) {
+  .section-title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.167;
+  }
+}
+
 
 .subscribe-form__btn {
   display: block;
@@ -341,15 +371,28 @@ img {
 
 .logo {
   font-family: var(--logo-text);
-  font-size: 26px;
-  line-height: 1.192;
+
+  font-size: 24px;
+  line-height: 1.167;
   font-weight: 700;
+}
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.192;
+  }
 }
 
 .logo--top {
-  padding: 24px 0;
+  padding: 16px 0;
   color: var(--design-black-color);
 }
+@media screen and (min-width: 768px) {
+  .logo--top {
+    padding: 24px 0;
+  }
+}
+
 
 .logo--bottom {
   color: var(--design-white-color);
@@ -423,6 +466,13 @@ img {
   margin-left: 93px;
 }
 
+@media screen and (max-width: 767px) {
+  .nav {
+    display: none;
+  }
+}
+
+
 .nav__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -479,11 +529,22 @@ img {
 }
 
 .header-address {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+
   margin-left: auto;
 }
+@media screen and (max-width: 767px) {
+  .header-address {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-address {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 
 .header-address__link {
   display: -webkit-box;
@@ -492,19 +553,35 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 32px 0;
+
   font-weight: 500;
   letter-spacing: 0.02em;
   color: var(--secondary-color);
   -webkit-transition: color 250ms var(--timing-fn);
   transition: color 250ms var(--timing-fn);
 }
-.header-address__link:not(:last-child) {
-  margin-right: 40px;
-}
+
 .header-address__link:hover, .header-address__link:focus {
   color: var(--accent-color);
 }
+@media screen and (max-width: 1199px) {
+  .header-address__link:nth-child(1) {
+    margin-bottom: 10px;
+    padding-top: 19px;
+  }
+  .header-address__link:nth-child(2) {
+    padding-bottom: 19px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-address__link {
+    padding: 32px 0;
+  }
+  .header-address__link:not(:last-child) {
+    margin-right: 40px;
+  }
+}
+
 
 .header-address__icon {
   margin-right: 10px;
