--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,21 +1,45 @@
 .team {
-	padding: 94px 0;
+
+	padding: 60px 0;
 
 	background: var(--bg-color-minor);
+
+	@media screen and (min-width: 1200px) {
+		padding: 94px 0;
+	}
 }
 
 .team__list {
-	display: flex;
-	justify-content: space-between;
+	@media screen and (min-width: 768px) {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 30px;
+	}
 }
 
 .team__item {
-	padding-bottom: 30px;
+	padding-bottom: 24px;
+
 	border-radius: 0 0 4px 4px;
 
 	background-color: var(--design-white-color);
 	box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 12%), 0 1px 1px 0 rgba(0, 0, 0, 14%),
 		0 2px 1px 0 rgba(0, 0, 0, 20%);
+
+
+	@media screen and (min-width: 768px) {
+		width: 354px;
+	}
+
+	@media screen and (min-width: 1200px) {
+		width: 270px;
+		padding-bottom: 30px;
+	}
+}
+
+.team__img {
+	width: 100%;
+
 }
 
 .team__name {
