--- a/sass/common/_base.scss
+++ b/sass/common/_base.scss
@@ -40,15 +40,41 @@ img {
 }
 
 .container {
-	width: 1200px;
+
+	min-width: 320px;
 	padding: 0 15px;
 	margin: 0 auto;
+
+	@media screen and (max-width: 319px) {
+		background-color: aqua;
+	}
+
+	@media screen and (max-width: 767px) {
+		max-width: 480px;
+	}
+
+	@media screen and (min-width: 768px) {
+		width: 768px;
+	}
+
+	@media screen and (min-width: 1200px) {
+		width: 1200px;
+	}
 }
 
 .section-title {
-	margin-bottom: 50px;
+	margin-bottom: 30px;
 
 	text-align: center;
-	font-size: 36px;
+	font-size: 28px;
+	line-height: 1.179;
 	font-weight: 700;
+
+	@media screen and (min-width: 1200px) {
+		margin-bottom: 50px;
+
+		font-size: 36px;
+		line-height: 1.167;
+	}
+
 }
