--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,6 +6,12 @@
 }
 
 .nav {
+
+	@media screen and (max-width: 767px) {
+		display: none;
+	}
+
+
 	margin-left: 93px;
 }
 
@@ -67,14 +73,25 @@
 }
 
 .header-address {
-	display: flex;
+
 	margin-left: auto;
+
+	@media screen and (max-width: 767px) {
+		display: none;
+	}
+
+	@media screen and (min-width: 1200px) {
+		display: flex;
+	}
+
 }
 
 .header-address__link {
 	display: flex;
 	align-items: center;
-	padding: 32px 0;
+
+	// padding: 5px 0;
+
 
 	font-weight: 500;
 	letter-spacing: 0.02em;
@@ -83,14 +100,32 @@
 
 	transition: color 250ms var(--timing-fn);
 
-	&:not(:last-child) {
-		margin-right: 40px;
-	}
 
 	&:hover,
 	&:focus {
 		color: var(--accent-color);
 	}
+
+
+	@media screen and (max-width: 1199px) {
+		&:nth-child(1) {
+			margin-bottom: 10px;
+			padding-top: 19px;
+		}
+
+		&:nth-child(2) {
+			padding-bottom: 19px;
+		}
+	}
+
+	@media screen and (min-width: 1200px) {
+		padding: 32px 0;
+
+		&:not(:last-child) {
+			margin-right: 40px;
+		}
+	}
+
 }
 
 .header-address__icon {
