--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,10 +10,8 @@
 @import './layout/advantages';
 @import './layout/services';
 @import './layout/team';
-
-// @import './layout/clients';
+@import './layout/clients';
 // @import './layout/footer';
 // @import './layout/modal';
 // @import './components/info-form';
 @import './components/mobmenu';
-
