--- a/css/main.css
+++ b/css/main.css
@@ -303,7 +303,6 @@ img {
 }
 
 .container {
-
   min-width: 320px;
   padding: 0 15px;
   margin: 0 auto;
@@ -345,7 +344,6 @@ img {
 }
 
 .hero__btn {
-
   display: block;
   margin: 0;
   padding: 0;
@@ -365,15 +363,12 @@ img {
   -webkit-transition: background-color 250ms var(--timing-fn);
   transition: background-color 250ms var(--timing-fn);
 }
-
 .hero__btn:hover, .hero__btn:focus {
-
   background-color: var(--acc-color-hover);
 }
 
 .logo {
   font-family: var(--logo-text);
-
   font-size: 24px;
   line-height: 1.167;
   font-weight: 700;
@@ -466,13 +461,11 @@ img {
 .nav {
   margin-left: 93px;
 }
-
 @media screen and (max-width: 767px) {
   .nav {
     display: none;
   }
 }
-
 
 .nav__list {
   display: -webkit-box;
@@ -530,7 +523,6 @@ img {
 }
 
 .header-address {
-
   margin-left: auto;
 }
 @media screen and (max-width: 767px) {
@@ -546,7 +538,6 @@ img {
   }
 }
 
-
 .header-address__link {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -554,14 +545,12 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-
   font-weight: 500;
   letter-spacing: 0.02em;
   color: var(--secondary-color);
   -webkit-transition: color 250ms var(--timing-fn);
   transition: color 250ms var(--timing-fn);
 }
-
 .header-address__link:hover, .header-address__link:focus {
   color: var(--accent-color);
 }
@@ -583,7 +572,6 @@ img {
   }
 }
 
-
 .header-address__icon {
   margin-right: 10px;
   fill: currentColor;
@@ -593,7 +581,6 @@ img {
 }
 
 .hero {
-
   padding: 118px 0;
   background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4)));
   background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
@@ -618,12 +605,10 @@ img {
   font-size: 26px;
   text-align: center;
   line-height: 1.615;
-
   font-weight: 900;
   letter-spacing: 0.06em;
   color: var(--design-white-color);
 }
-
 @media screen and (max-width: 479px) {
   .hero__title {
     padding: 0 8vw;
@@ -643,13 +628,11 @@ img {
   }
 }
 
-
 .hero__btn {
   margin: 30px auto 0;
 }
 
 .advantages {
-
   padding: 60px 0;
 }
 @media screen and (min-width: 1200px) {
@@ -685,7 +668,6 @@ img {
     -ms-flex-preferred-size: calc((100% - 90px) / 4);
         flex-basis: calc((100% - 90px) / 4);
   }
-
 }
 
 .advantages__wrap {
@@ -698,8 +680,6 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-
-
   height: 120px;
   border-radius: 4px;
   margin-bottom: 30px;
@@ -716,6 +696,11 @@ img {
   font-size: inherit;
   font-weight: 700;
 }
+@media screen and (max-width: 767px) {
+  .advantages__name {
+    text-align: center;
+  }
+}
 
 .advantages__text {
   line-height: 1.715;
@@ -725,13 +710,11 @@ img {
 .services {
   padding-bottom: 94px;
 }
-
 @media screen and (max-width: 1199px) {
   .services {
     display: none;
   }
 }
-
 
 .services__list {
   display: -webkit-box;
@@ -764,7 +747,6 @@ img {
 }
 
 .team {
-
   padding: 60px 0;
   background: var(--bg-color-minor);
 }
@@ -787,13 +769,11 @@ img {
 
 .team__item {
   padding-bottom: 24px;
-
   border-radius: 0 0 4px 4px;
   background-color: var(--design-white-color);
   -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
 }
-
 @media screen and (min-width: 768px) {
   .team__item {
     width: 354px;
@@ -810,7 +790,6 @@ img {
   width: 100%;
 }
 
-
 .team__name {
   margin: 30px 0 10px;
   text-align: center;
@@ -825,6 +804,68 @@ img {
   color: var(--secondary-color);
 }
 
+.clients {
+  padding: 60px 0;
+}
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding: 94px 0;
+  }
+}
+
+.clients__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
+}
+
+.clients__item {
+  -ms-flex-preferred-size: calc((100% - 30px) / 2);
+      flex-basis: calc((100% - 30px) / 2);
+}
+@media screen and (min-width: 768px) {
+  .clients__item {
+    -ms-flex-preferred-size: calc((100% - 60px) / 3);
+        flex-basis: calc((100% - 60px) / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients__item {
+    -ms-flex-preferred-size: calc((100% - 150px) / 6);
+        flex-basis: calc((100% - 150px) / 6);
+  }
+}
+
+.clients__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 90px;
+  border-radius: 4px;
+  border: 1px solid var(--icon-color);
+  color: var(--icon-color);
+  -webkit-transition: color 250ms var(--timing-fn), border-color 250ms var(--timing-fn);
+  transition: color 250ms var(--timing-fn), border-color 250ms var(--timing-fn);
+}
+.clients__link:hover, .clients__link:focus {
+  border-color: var(--accent-color);
+  color: var(--accent-color);
+}
+
+.clients__icon {
+  width: 106px;
+  height: 60px;
+  fill: currentColor;
+}
 
 .mobmenu__button {
   display: inline-block;
@@ -835,12 +876,10 @@ img {
   border: none;
   color: var(--main-color);
   background-color: transparent;
-
   cursor: pointer;
   -webkit-transition: color 250ms var(--timing-fn);
   transition: color 250ms var(--timing-fn);
 }
-
 .mobmenu__button:hover, .mobmenu__button:focus {
   color: var(--accent-color);
 }
@@ -852,5 +891,4 @@ img {
 
 .mobmenu__button-icon {
   fill: currentColor;
-
 }/*# sourceMappingURL=main.css.map */
