--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,20 +1,33 @@
 .clients {
-	padding: 94px 0;
+	padding: 60px 0;
+
+	@media screen and (min-width: 1200px) {
+		padding: 94px 0;
+	}
 }
 
 .clients__list {
 	display: flex;
+	flex-wrap: wrap;
+	gap: 30px;
 }
 
-.clients__item:not(:last-child) {
-	margin-right: 30px;
+.clients__item {
+	flex-basis: calc((100% - 30px) / 2);
+
+	@media screen and (min-width: 768px) {
+		flex-basis: calc((100% - 2 * 30px) / 3);
+	}
+
+	@media screen and (min-width: 1200px) {
+		flex-basis: calc((100% - 5 * 30px) / 6);
+	}
 }
 
 .clients__link {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 168px;
 	height: 90px;
 	border-radius: 4px;
 	border: 1px solid var(--icon-color);
