--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,7 +11,7 @@
 @import './layout/services';
 @import './layout/team';
 @import './layout/clients';
-// @import './layout/footer';
+@import './layout/footer';
 // @import './layout/modal';
 // @import './components/info-form';
 @import './components/mobmenu';
