--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,25 +1,44 @@
 .buttons {
 	display: flex;
-	justify-content: center;
-	margin-bottom: 50px;
+	flex-wrap: wrap;
+	column-gap: 8px;
+	row-gap: 15px;
+
+	@media screen and (max-width: 767px) {
+		width: 274px;
+	}
+
+	@media screen and (min-width: 768px) {
+		justify-content: center;
+	}
+	// margin-bottom: 50px;
 }
 
-.buttons__item:not(:last-child) {
-	margin-right: 8px;
-}
+// .buttons__item {
+// 	&:not(:last-child) {
+// 		margin-right: 8px;
+// 	}
+
+// 	@media screen and (max-width: 767px) {
+// 		&:nth-child(1) {
+// 			margin-bottom: 15px;
+// 		}
+// 	}
+// }
 
 .buttons__snap {
 	display: block;
-	padding: 6px 23px;
+	padding: 6px 22px;
 	border-radius: 4px;
 	border: none;
 	cursor: pointer;
 
+	color: var(--main-color);
 	font-family: inherit;
 	font-size: 16px;
 	line-height: 1.625;
 	font-weight: 500;
-	background-color: #f5f4fa;
+	background-color: var(--bg-color-minor);
 
 	transition: color 250ms var(--timing-fn), background-color 250ms var(--timing-fn),
 		box-shadow 250ms var(--timing-fn);
