--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -1,6 +1,10 @@
 .portfolio {
-	padding: 94px 0;
+	padding: 60px 0;
 	border-top: 1px solid #ececec;
+
+	@media screen and (min-width: 1200px) {
+		padding: 94px 0;
+	}
 }
 
 .projects {
