--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -6,7 +6,7 @@
 @import './components/logo';
 @import './components/social';
 @import './layout/header';
-// @import './layout/projects';
-// @import './components/buttons';
+@import './layout/projects';
+@import './components/buttons';
 @import './layout/footer';
 @import './components/mobmenu';
