--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,6 @@
 @import './layout/team';
 @import './layout/clients';
 @import './layout/footer';
-// @import './layout/modal';
-// @import './components/info-form';
+@import './layout/modal';
+@import './components/info-form';
 @import './components/mobmenu';
