--- a/css/main.css
+++ b/css/main.css
@@ -277,6 +277,9 @@ body.dark-theme {
   --bg-color-minor: #aaaaaa78;
   background-color: #383839;
 }
+body.modal-open {
+  overflow: hidden;
+}
 
 h1,
 h2,
@@ -343,7 +346,7 @@ img {
   }
 }
 
-.subscribe-form__btn, .hero__btn {
+.info-form__button, .subscribe-form__btn, .hero__btn {
   display: block;
   margin: 0;
   padding: 0;
@@ -363,7 +366,7 @@ img {
   -webkit-transition: background-color 250ms var(--timing-fn);
   transition: background-color 250ms var(--timing-fn);
 }
-.subscribe-form__btn:hover, .hero__btn:hover, .subscribe-form__btn:focus, .hero__btn:focus {
+.info-form__button:hover, .subscribe-form__btn:hover, .hero__btn:hover, .info-form__button:focus, .subscribe-form__btn:focus, .hero__btn:focus {
   background-color: var(--acc-color-hover);
 }
 
@@ -1024,6 +1027,288 @@ img {
 .subscribe-form__icon {
   margin-left: 25px;
   fill: currentColor;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  -webkit-transition: opacity 250ms var(--timing-fn);
+  transition: opacity 250ms var(--timing-fn);
+}
+.backdrop.is-hidden {
+  pointer-events: none;
+  opacity: 0;
+}
+@media screen and (max-width: 767px) {
+  .backdrop {
+    padding: 30px 15px;
+  }
+}
+
+.modal {
+  border-radius: 4px;
+  padding: 8.333vw;
+  overflow-y: scroll;
+  background-color: var(--design-white-color);
+  -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: -webkit-transform 250ms var(--timing-fn);
+  transition: -webkit-transform 250ms var(--timing-fn);
+  transition: transform 250ms var(--timing-fn);
+  transition: transform 250ms var(--timing-fn), -webkit-transform 250ms var(--timing-fn);
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    padding: 40px;
+    margin: auto;
+    width: 450px;
+    height: 609px;
+    max-height: 95vh;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
+}
+.backdrop.is-hidden .modal {
+  -webkit-transform: scale(0.5);
+          transform: scale(0.5);
+}
+@media screen and (min-width: 768px) {
+  .backdrop.is-hidden .modal {
+    -webkit-transform: translate(-50%, -50%) scale(0.5);
+            transform: translate(-50%, -50%) scale(0.5);
+  }
+}
+
+.modal__close-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  color: var(--design-black-color);
+  background-color: var(--design-white-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  -webkit-transition: color 250ms var(--timing-fn);
+  transition: color 250ms var(--timing-fn);
+}
+.modal__close-button:hover, .modal__close-button:focus {
+  color: var(--accent-color);
+}
+
+.modal__close-icon {
+  width: 18px;
+  height: 18px;
+  fill: currentColor;
+}
+
+.modal__title {
+  margin-bottom: 30px;
+  font-size: 20px;
+  line-height: 1.15;
+  font-weight: 700;
+  text-align: center;
+}
+
+.info-form__list {
+  margin-bottom: 20px;
+}
+
+.info-form__item {
+  position: relative;
+  margin-bottom: 28px;
+}
+.info-form__item:last-child {
+  margin-bottom: 0px;
+}
+
+.info-form__input {
+  display: block;
+  padding: 11px 12px 11px 42px;
+  width: 100%;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  -webkit-transition: border-color 250ms var(--timing-fn);
+  transition: border-color 250ms var(--timing-fn);
+}
+.info-form__input:focus {
+  border-color: var(--accent-color);
+}
+
+.info-form__label {
+  position: absolute;
+  top: 50%;
+  left: 42px;
+  display: block;
+  color: var(--secondary-color);
+  font-size: 12px;
+  line-height: 1.167;
+  letter-spacing: 0.01em;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: color 250ms var(--timing-fn), -webkit-transform 250ms var(--timing-fn);
+  transition: color 250ms var(--timing-fn), -webkit-transform 250ms var(--timing-fn);
+  transition: transform 250ms var(--timing-fn), color 250ms var(--timing-fn);
+  transition: transform 250ms var(--timing-fn), color 250ms var(--timing-fn), -webkit-transform 250ms var(--timing-fn);
+}
+.info-form__input:focus + .info-form__label {
+  color: var(--accent-color);
+  -webkit-transform: translate(-42px, -40px);
+          transform: translate(-42px, -40px);
+}
+.info-form__input:not(:-moz-placeholder-shown) + .info-form__label {
+  transform: translate(-42px, -40px);
+}
+.info-form__input:not(:-ms-input-placeholder) + .info-form__label {
+  transform: translate(-42px, -40px);
+}
+.info-form__input:not(:placeholder-shown) + .info-form__label {
+  -webkit-transform: translate(-42px, -40px);
+          transform: translate(-42px, -40px);
+}
+.info-form__textarea + .info-form__label {
+  -webkit-transform: translate(-42px, -80px);
+          transform: translate(-42px, -80px);
+}
+.info-form__textarea:focus + .info-form__label {
+  color: var(--accent-color);
+}
+
+.info-form__icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  fill: var(--main-color);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: fill 250ms var(--timing-fn);
+  transition: fill 250ms var(--timing-fn);
+}
+.info-form__input:focus ~ .info-form__icon {
+  fill: var(--accent-color);
+}
+
+.info-form__textarea {
+  display: block;
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  -webkit-transition: border-color 250ms var(--timing-fn);
+  transition: border-color 250ms var(--timing-fn);
+}
+.info-form__textarea:focus {
+  border-color: var(--accent-color);
+}
+.info-form__textarea::-webkit-input-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+  letter-spacing: 0.01em;
+}
+.info-form__textarea::-moz-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+  letter-spacing: 0.01em;
+}
+.info-form__textarea:-ms-input-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+  letter-spacing: 0.01em;
+}
+.info-form__textarea::-ms-input-placeholder {
+  color: rgba(117, 117, 117, 0.5);
+  letter-spacing: 0.01em;
+}
+.info-form__textarea::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+  letter-spacing: 0.01em;
+}
+
+.info-form__checkbox-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 30px;
+  font-size: 12px;
+  line-height: 1.167;
+  color: var(--secondary-color);
+}
+@media screen and (max-width: 479px) {
+  .info-form__checkbox-label {
+    font-size: 2.5vw;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .info-form__checkbox-label {
+    font-size: 14px;
+    line-height: 1.714;
+  }
+}
+
+.info-form__checkbox-current {
+  margin-right: 8px;
+  border-radius: 2px;
+  border: 2px solid var(--main-color);
+  fill: var(--design-white-color);
+  background-color: var(--design-white-color);
+  -webkit-transition: border-width 250ms var(--timing-fn), background-color 250ms var(--timing-fn);
+  transition: border-width 250ms var(--timing-fn), background-color 250ms var(--timing-fn);
+}
+.info-form__checkbox-initial:checked + .info-form__checkbox-current {
+  border-width: 0px;
+  background-color: var(--accent-color);
+}
+
+.info-form__btn-conditions {
+  padding: 0;
+  border: none;
+  color: var(--accent-color);
+  text-decoration: underline;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.info-form__button {
+  margin: 0 auto;
 }
 
 .mobmenu__button {
