--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -5,6 +5,7 @@
 
 	width: 100%;
 	height: 100%;
+	overflow-y: scroll;
 
 	background-color: rgba(0, 0, 0, 0.2);
 	opacity: 1;
@@ -16,27 +17,51 @@
 
 		opacity: 0;
 	}
+
+	@media screen and (max-width: 767px) {
+		padding: 30px 15px;
+	}
 }
 
 .modal {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-
-	width: 528px;
-	height: 581px;
 	border-radius: 4px;
-	padding: 40px;
+	padding: 8.333vw;
+	overflow-y: scroll;
 
 	background-color: var(--design-white-color);
 	box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14),
 		0 2px 1px 0 rgba(0, 0, 0, 0.2);
 
-	transform: translate(-50%, -50%) scale(1);
+	transform: scale(1);
 	transition: transform 250ms var(--timing-fn);
 
+	@media screen and (min-width: 480px) {
+		padding: 40px;
+		margin: auto;
+		width: 450px;
+		height: 609px;
+		max-height: 95vh;
+	}
+
+	@media screen and (min-width: 768px) {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+
+		transform: translate(-50%, -50%) scale(1);
+	}
+
+	@media screen and (min-width: 1200px) {
+		width: 528px;
+		height: 581px;
+	}
+
 	.backdrop.is-hidden & {
-		transform: translate(-50%, -50%) scale(0.5);
+		transform: scale(0.5);
+
+		@media screen and (min-width: 768px) {
+			transform: translate(-50%, -50%) scale(0.5);
+		}
 	}
 }
 
