--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -14,7 +14,16 @@
 }
 
 .projects__item {
-	flex-basis: calc((100% - 2 * 30px) / 3);
+	// flex-basis: calc((100% - 2 * 30px) / 3);
+	max-width: 450px;
+
+	@media screen and (min-width: 768px) {
+		flex-basis: calc((100% - 30px) / 2);
+	}
+
+	@media screen and (min-width: 1200px) {
+		flex-basis: calc((100% - 2 * 30px) / 3);
+	}
 }
 
 .projects__link {
@@ -37,13 +46,17 @@
 	}
 }
 
+.projects__img {
+	width: 100%;
+}
+
 .projects__overlay {
 	position: absolute;
 	top: 0;
 	left: 0;
 
-	width: 370px;
-	height: 294px;
+	width: 100%;
+	height: 100%;
 	padding: 24px;
 
 	background-color: rgba(33, 150, 243, 0.9);
@@ -102,6 +115,10 @@
 	border-right: 1px solid var(--projects-item-color);
 	border-bottom: 1px solid var(--projects-item-color);
 	border-left: 1px solid var(--projects-item-color);
+
+	@media screen and (min-width: 768px) and (max-width: 1199px) {
+		height: 146px;
+	}
 }
 
 .projects__name {
