--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -706,6 +706,11 @@ img {
   line-height: 1.556;
   color: var(--design-white-color);
 }
+@media screen and (max-width: 479px) {
+  .projects__details {
+    font-size: 3.75vw;
+  }
+}
 
 .projects__desc-wrap {
   padding: 20px 24px;
@@ -726,11 +731,21 @@ img {
   line-height: 2;
   letter-spacing: 0.06em;
 }
+@media screen and (max-width: 479px) {
+  .projects__name {
+    font-size: 3.75vw;
+  }
+}
 
 .projects__desc {
   font-size: 16px;
   line-height: 1.875;
   color: var(--secondary-color);
+}
+@media screen and (max-width: 479px) {
+  .projects__desc {
+    font-size: 3.333vw;
+  }
 }
 
 .buttons {
